Mit Colab erstellt

--- a/ak_API_examples.ipynb
+++ b/ak_API_examples.ipynb
@@ -19,6 +19,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Neuer Abschnitt"
+      ],
+      "metadata": {
+        "id": "Q8osN___bX_7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## How do I use the Jupyter Notebook?\n",
         "\n",
         "You can copy the ipynb file or run it directly in Google Colab.\n",
@@ -118,7 +127,7 @@
       "metadata": {
         "id": "XiIhu-zxOycz"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1787,6 +1796,107 @@
             ]
           },
           "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "xkiJVHdHbjl0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Import"
+      ],
+      "metadata": {
+        "id": "ehY95WAnbahE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Import Users via CSV\n",
+        "\n",
+        "This script reads user data from a CSV file stored on your Google Drive and creates users in your system via an API. It processes each row in the CSV and calls the API to create a user with the provided details.\n"
+      ],
+      "metadata": {
+        "id": "jE0xIMO_bgJ1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Mount Google Drive (for Google Colab)\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "import pandas as pd\n",
+        "import requests\n",
+        "\n",
+        "\n",
+        "# Function to create a user via the API\n",
+        "def create_user(token, name, email, pw, company_id, role):\n",
+        "    user_data = {\n",
+        "        \"name\": name,\n",
+        "        \"email\": email,\n",
+        "        \"password\": pw,\n",
+        "        \"company_id\": company_id,\n",
+        "        \"roles\": [role],\n",
+        "    }\n",
+        "    user = fetch('POST', '/api/v2/users', user_data, token=token)\n",
+        "    return user['data']\n",
+        "\n",
+        "# Define the path to your CSV file on Google Drive\n",
+        "csv_file_path = '/content/drive/My Drive/importuser.csv'\n",
+        "\n",
+        "# Read the CSV file (it must be comma-separated with columns: name, email, password, company_id, role)\n",
+        "df = pd.read_csv(csv_file_path)\n",
+        "\n",
+        "# Loop through each row in the DataFrame and create users via the API\n",
+        "for index, row in df.iterrows():\n",
+        "    name = row['name']\n",
+        "    email = row['email']\n",
+        "    pw = row['password']\n",
+        "    company_id = row['company_id']\n",
+        "    role = row['role']\n",
+        "\n",
+        "    created_user = create_user(token, name, email, pw, company_id, role)\n",
+        "    print(f\"User created: {created_user}\")"
+      ],
+      "metadata": {
+        "id": "IUVZUMR5eyVk",
+        "outputId": "7fd394ad-806a-4832-8f47-b55c6173fd9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 428
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "User created: {'id': 201189, 'name': 'Steffi Test1', 'firstname': 'Steffi', 'lastname': 'Test1', 'title': '', 'created_at': 1743253627, 'updated_at': 1743253628, 'deleted_at': None, 'status': {'no_approbation_reminder_until': None, 'pending_email': None, 'locked_until': None}, 'gender': 'notset', 'company_id': 543, 'company_name': 'Healthcare Test GmbH', 'ousubsidiary_id': None, 'ousubsidiary_name': '', 'oulocation_id': None, 'oulocation_name': '', 'department_id': None, 'department_name': '', 'languages': [], 'roles': [{'id': 2, 'name': 'doc'}], 'permissions': [], 'tan': '', 'tan_valid_from': '', 'tan_valid_until': None, 'tan_by_id': None, 'tan_by_type': None, 'tan_created_type': None, 'consentstatus': {'tan_descriptions_agreed': False, 'tan_data_agreed': False}, 'tags': [], 'email_verified_at': 1743253626, 'is_unlocked': 1, 'expires_at': None, 'is_app_user': False, 'description': None, 'extid': None, 'newsletter': {'generals': False, 'updates': False}, 'email': 'steffi-test1@ak.de', 'mobile': None, 'servicedocuments': [], 'notification_options': [{'notification_id': 1001, 'enabled': 1, 'value': ['steffi-test1@ak.de'], 'name': 'Benachrichtigung per E-Mail'}, {'notification_id': 1002, 'enabled': 1, 'value': [], 'name': 'Benachrichtigung per SMS'}, {'notification_id': 2001, 'enabled': 0, 'value': [], 'name': 'Termin erstellt'}, {'notification_id': 2002, 'enabled': 0, 'value': [], 'name': 'Termin geändert'}, {'notification_id': 2003, 'enabled': 1, 'value': [], 'name': 'Termin gelöscht'}, {'notification_id': 3001, 'enabled': 1, 'value': [], 'name': 'Dokument erhalten'}, {'notification_id': 3004, 'enabled': 1, 'value': [], 'name': 'Dokument läuft ab'}]}\n",
+            "User created: {'id': 201194, 'name': 'Steffi Test2', 'firstname': 'Steffi', 'lastname': 'Test2', 'title': '', 'created_at': 1743253630, 'updated_at': 1743253631, 'deleted_at': None, 'status': {'no_approbation_reminder_until': None, 'pending_email': None, 'locked_until': None}, 'gender': 'notset', 'company_id': 543, 'company_name': 'Healthcare Test GmbH', 'ousubsidiary_id': None, 'ousubsidiary_name': '', 'oulocation_id': None, 'oulocation_name': '', 'department_id': None, 'department_name': '', 'languages': [], 'roles': [{'id': 2, 'name': 'doc'}], 'permissions': [], 'tan': '', 'tan_valid_from': '', 'tan_valid_until': None, 'tan_by_id': None, 'tan_by_type': None, 'tan_created_type': None, 'consentstatus': {'tan_descriptions_agreed': False, 'tan_data_agreed': False}, 'tags': [], 'email_verified_at': 1743253630, 'is_unlocked': 1, 'expires_at': None, 'is_app_user': False, 'description': None, 'extid': None, 'newsletter': {'generals': False, 'updates': False}, 'email': 'steffi-test2@ak.de', 'mobile': None, 'servicedocuments': [], 'notification_options': [{'notification_id': 1001, 'enabled': 1, 'value': ['steffi-test2@ak.de'], 'name': 'Benachrichtigung per E-Mail'}, {'notification_id': 1002, 'enabled': 1, 'value': [], 'name': 'Benachrichtigung per SMS'}, {'notification_id': 2001, 'enabled': 0, 'value': [], 'name': 'Termin erstellt'}, {'notification_id': 2002, 'enabled': 0, 'value': [], 'name': 'Termin geändert'}, {'notification_id': 2003, 'enabled': 1, 'value': [], 'name': 'Termin gelöscht'}, {'notification_id': 3001, 'enabled': 1, 'value': [], 'name': 'Dokument erhalten'}, {'notification_id': 3004, 'enabled': 1, 'value': [], 'name': 'Dokument läuft ab'}]}\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "Exception",
+          "evalue": "Request failed with status code 422: {\"message\":\"#5122 - E-Mail Adresse wurde bereits verwendet.\",\"errors\":{\"email\":[\"#5122 - E-Mail Adresse wurde bereits verwendet.\"]}}",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-437c877b2593>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[0mrole\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'role'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m     \u001b[0mcreated_user\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_user\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoken\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0memail\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompany_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrole\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"User created: {created_user}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-2-437c877b2593>\u001b[0m in \u001b[0;36mcreate_user\u001b[0;34m(token, name, email, pw, company_id, role)\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;34m\"roles\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mrole\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     }\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0muser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfetch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'POST'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'/api/v2/users'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muser_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoken\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtoken\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0muser\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'data'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-1-0d1ee17eb59b>\u001b[0m in \u001b[0;36mfetch\u001b[0;34m(method, path, data, token)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus_code\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m400\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Request failed with status code {response.status_code}: {response.text}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mException\u001b[0m: Request failed with status code 422: {\"message\":\"#5122 - E-Mail Adresse wurde bereits verwendet.\",\"errors\":{\"email\":[\"#5122 - E-Mail Adresse wurde bereits verwendet.\"]}}"
+          ]
         }
       ]
     }
