Mit Colab erstellt

--- a/ak_API_examples.ipynb
+++ b/ak_API_examples.ipynb
@@ -119,7 +119,7 @@
         "\n",
         "def login():\n",
         "    c = {'email': email, 'password': password}\n",
-        "    result = fetch('POST', '/api/v2/auth', c)\n",
+        "    result = fetch('POST', '/api/auth', c)\n",
         "    return result['access_token']\n",
         "\n",
         "token = login()\n"
@@ -127,7 +127,7 @@
       "metadata": {
         "id": "XiIhu-zxOycz"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -487,10 +487,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "TV-SAjHqdOGx",
-        "outputId": "45614d49-566a-4f54-ee3f-a0c6890479f4",
+        "outputId": "8d472ba9-c9de-436d-944b-4ff1b0c73166",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -502,9 +502,9 @@
           "text": [
             "Call\n",
             "{\n",
-            "  \"id\": 45982,\n",
-            "  \"created_at\": 1729003817,\n",
-            "  \"updated_at\": 1729003817,\n",
+            "  \"id\": 77331,\n",
+            "  \"created_at\": 1750151215,\n",
+            "  \"updated_at\": 1750151215,\n",
             "  \"deleted_at\": null,\n",
             "  \"settings\": {\n",
             "    \"queue_type\": \"\",\n",
@@ -518,7 +518,7 @@
             "  \"children\": null,\n",
             "  \"begin\": null,\n",
             "  \"duration\": 15,\n",
-            "  \"room\": \"EtWElFniei4kGXT8U5LCTwmKMnmdVI\",\n",
+            "  \"room\": \"FvSco7Eqtmoo6zPtDiuaEiz97nHTFB\",\n",
             "  \"status\": 0,\n",
             "  \"extid\": null,\n",
             "  \"description\": null,\n",
@@ -526,7 +526,7 @@
             "  \"source\": null,\n",
             "  \"users\": [\n",
             "    {\n",
-            "      \"id\": 129907,\n",
+            "      \"id\": 207841,\n",
             "      \"user_name\": \"TAN-User12\",\n",
             "      \"status\": 19,\n",
             "      \"gender\": \"notset\",\n",
@@ -538,10 +538,10 @@
             "      \"department_name\": null,\n",
             "      \"role_id\": 1,\n",
             "      \"role_name\": \"tanuser\",\n",
-            "      \"tan\": \"KBTv-YhyT-vA3d\",\n",
-            "      \"tan_valid_until\": 1737331200,\n",
+            "      \"tan\": \"XrwM-Widc-iPNX\",\n",
+            "      \"tan_valid_until\": null,\n",
             "      \"log_id\": null,\n",
-            "      \"email\": \"tan-user2@arztkonsultation.de\",\n",
+            "      \"email\": \"\",\n",
             "      \"mobile\": null,\n",
             "      \"consentstatus\": {\n",
             "        \"tan_descriptions_agreed\": false,\n",
@@ -549,25 +549,26 @@
             "      },\n",
             "      \"has_pki\": false,\n",
             "      \"pki_is_secured\": false,\n",
-            "      \"email_bounced\": false\n",
+            "      \"email_bounced\": false,\n",
+            "      \"extid\": null\n",
             "    },\n",
             "    {\n",
-            "      \"id\": 59288,\n",
-            "      \"user_name\": \"Arzt1 Code-Beispiele\",\n",
+            "      \"id\": 137979,\n",
+            "      \"user_name\": \"Steffi1 Test\",\n",
             "      \"status\": 19,\n",
             "      \"gender\": \"notset\",\n",
-            "      \"company_id\": 827,\n",
-            "      \"company_name\": \"ak Code Beispiele\",\n",
+            "      \"company_id\": 543,\n",
+            "      \"company_name\": \"Healthcare Test GmbH\",\n",
             "      \"ousubsidiary_id\": null,\n",
             "      \"oulocation_id\": null,\n",
             "      \"department_id\": null,\n",
             "      \"department_name\": null,\n",
             "      \"role_id\": 12,\n",
             "      \"role_name\": \"callee\",\n",
-            "      \"tan\": \"DxqJ-9pFi-T79r\",\n",
-            "      \"tan_valid_until\": 1737244800,\n",
+            "      \"tan\": \"pWm5-o3kg-tmRM\",\n",
+            "      \"tan_valid_until\": null,\n",
             "      \"log_id\": null,\n",
-            "      \"email\": \"arzt1-ak-code-beispiele@arztkonsultation.de\",\n",
+            "      \"email\": \"stefanie.schalitz+steffi1@arztkonsultation.de\",\n",
             "      \"mobile\": null,\n",
             "      \"consentstatus\": {\n",
             "        \"tan_descriptions_agreed\": false,\n",
@@ -575,15 +576,16 @@
             "      },\n",
             "      \"has_pki\": true,\n",
             "      \"pki_is_secured\": false,\n",
-            "      \"email_bounced\": false\n",
+            "      \"email_bounced\": false,\n",
+            "      \"extid\": null\n",
             "    },\n",
             "    {\n",
-            "      \"id\": 58877,\n",
-            "      \"user_name\": \"Admin Code Beispiele\",\n",
+            "      \"id\": 15795,\n",
+            "      \"user_name\": \"Stefanie Schalitz\",\n",
             "      \"status\": 0,\n",
-            "      \"gender\": \"notset\",\n",
-            "      \"company_id\": 827,\n",
-            "      \"company_name\": \"ak Code Beispiele\",\n",
+            "      \"gender\": \"female\",\n",
+            "      \"company_id\": 543,\n",
+            "      \"company_name\": \"Healthcare Test GmbH\",\n",
             "      \"ousubsidiary_id\": null,\n",
             "      \"oulocation_id\": null,\n",
             "      \"department_id\": null,\n",
@@ -593,15 +595,16 @@
             "      \"tan\": \"\",\n",
             "      \"tan_valid_until\": null,\n",
             "      \"log_id\": null,\n",
-            "      \"email\": \"ak-code-beispiele@arztkonsultation.de\",\n",
-            "      \"mobile\": null,\n",
+            "      \"email\": \"stefanie.schalitz+test1@arztkonsultation.de\",\n",
+            "      \"mobile\": \"+4915121770530\",\n",
             "      \"consentstatus\": {\n",
             "        \"tan_descriptions_agreed\": false,\n",
             "        \"tan_data_agreed\": false\n",
             "      },\n",
             "      \"has_pki\": true,\n",
-            "      \"pki_is_secured\": false,\n",
-            "      \"email_bounced\": false\n",
+            "      \"pki_is_secured\": true,\n",
+            "      \"email_bounced\": false,\n",
+            "      \"extid\": null\n",
             "    }\n",
             "  ],\n",
             "  \"note\": null,\n",
@@ -612,15 +615,15 @@
             "  \"is_billable\": null,\n",
             "  \"ou_product_offer\": null\n",
             "}\n",
-            "Der Anruf wurde erstellt am: 2024-10-15 14:50:17 UTC\n",
+            "Der Anruf wurde erstellt am: 2025-06-17 09:06:55 UTC\n",
             "Teilnehmer:\n",
-            "  - Name: TAN-User12, Rolle: tanuser, E-Mail: tan-user2@arztkonsultation.de\n",
-            "  - Link direkt ins Video für TAN-User12: https://video-steffi-test.arztkonsultation.de/video/45982?tan=KBTv-YhyT-vA3d\n",
-            "  - Name: Arzt1 Code-Beispiele, Rolle: callee, E-Mail: arzt1-ak-code-beispiele@arztkonsultation.de\n",
-            "  - Link direkt ins Video für Arzt1 Code-Beispiele: https://video-steffi-test.arztkonsultation.de/video/45982?tan=DxqJ-9pFi-T79r\n",
-            "  - Name: Admin Code Beispiele, Rolle: caller, E-Mail: ak-code-beispiele@arztkonsultation.de\n",
-            "  - Link direkt ins Video für Admin Code Beispiele: https://video-steffi-test.arztkonsultation.de/video/45982\n",
-            "{'callId': 45982, 'tan': 'KBTv-YhyT-vA3d'}\n"
+            "  - Name: TAN-User12, Rolle: tanuser, E-Mail: \n",
+            "  - Link direkt ins Video für TAN-User12: https://video-steffi-test.arztkonsultation.de/video/77331?tan=XrwM-Widc-iPNX\n",
+            "  - Name: Steffi1 Test, Rolle: callee, E-Mail: stefanie.schalitz+steffi1@arztkonsultation.de\n",
+            "  - Link direkt ins Video für Steffi1 Test: https://video-steffi-test.arztkonsultation.de/video/77331?tan=pWm5-o3kg-tmRM\n",
+            "  - Name: Stefanie Schalitz, Rolle: caller, E-Mail: stefanie.schalitz+test1@arztkonsultation.de\n",
+            "  - Link direkt ins Video für Stefanie Schalitz: https://video-steffi-test.arztkonsultation.de/video/77331\n",
+            "{'callId': 77331, 'tan': 'XrwM-Widc-iPNX'}\n"
           ]
         }
       ],
@@ -634,11 +637,10 @@
         "    call_data = {\n",
         "        \"duration\": 15,\n",
         "        \"tan_username\": \"TAN-User12\",\n",
-        "        \"tan_email\": \"TAN-User2@arztkonsultation.de\", # only neccesary if the ak system should send an email notification\n",
         "        \"call_type\": \"tan\", # mandatory\n",
         "        \"additional_callees\": [\n",
         "            {\n",
-        "                \"user_id\": 61261 # arzt1@steffi-test.de\n",
+        "                \"user_id\": 137979 # arzt1@steffi-test.de\n",
         "            }\n",
         "        ]\n",
         "    }\n",
@@ -1874,7 +1876,7 @@
           "height": 428
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
